compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/incompleteEnumReference.kt
enum class E {
    A,
    B,
    C
}

fun foo() {
    konst e = E.<!SYNTAX!><!>
}


